# classical-SAT-solving-algorithms

./: CMakeLists.txt  README.md
sat_solvers/cdcl/: sat_solver.cpp
sat_solvers/dp/: sat_solver.cpp
sat_solvers/dpll/: sat_solver.cpp
sat_solvers/resolution/: sat_solver.cpp
